# fastapi-library-managment-system

./: .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  version.py
app/: __init__.py
app/core/: config.py  container.py  dependencies.py  security.py
app/core/settings/: app.py  base.py  development.py  production.py  test.py
app/models/: book.py  loan.py  user.py
app/repositories/: book.py  loan.py  user.py
app/routers/: book.py  loan.py  user.py
